Bug 40488 - [4.5 Regression] Revision 148642 caused extra failures
Summary: [4.5 Regression] Revision 148642 caused extra failures
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: testsuite (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-18 13:28 UTC by H.J. Lu
Modified: 2009-06-18 23:35 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-06-18 13:28:21 UTC
Revision 148642:

http://gcc.gnu.org/ml/gcc-cvs/2009-06/msg00625.html

caused:

FAIL: gfortran.dg/bind_c_usage_13.f03  -O  scan-tree-dump original "mult .&.u..1..lb: 1 sz: 1., &.x..1..lb: 1 sz: 1., 1, 1.;"
FAIL: gfortran.dg/bind_c_usage_13.f03  -O  scan-tree-dump original "mult_array .&.abc..1..lb: 1 sz: 1., &.ab..1..lb: 1 sz: 1., 3, 2.;"
FAIL: gfortran.dg/bind_c_usage_13.f03  -O  scan-tree-dump original "mult_val ..x., .x., 1, 1.;"
FAIL: gfortran.dg/bind_c_usage_13.f03  -O  scan-tree-dump original "sub .&.u..1..lb: 1 sz: 1., 1.;"
FAIL: gfortran.dg/bind_c_usage_13.f03  -O  scan-tree-dump original "sub_array .&.abc..1..lb: 1 sz: 1., 3.;"
FAIL: gfortran.dg/bind_c_usage_13.f03  -O  scan-tree-dump original "sub_val ..x., 1.;"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.0.sub3noiso .0, 0B, 0B, 0B, b, a, 0, 0, 1, 1\);"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.0.sub3noiso .1, z, y, x, 0B, 0B, 1, 1, 0, 0\);"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.1.sub4iso .0, 0B, 0B, 0B, b, a, 0, 0, 1, 1\);"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.1.sub4iso .1, z, y, x, 0B, 0B, 1, 1, 0, 0\);"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.2.sub5iso .0, 0B, 0B, 0B, b, a, 0, 0, 1, 1\);"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.2.sub5iso .1, z, y, x, 0B, 0B, 1, 1, 0, 0\);"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.3.sub6noiso .0, 0B, 0B, 0B, b, a, 0, 0, 1, 1\);"
FAIL: gfortran.dg/bind_c_usage_14.f03  -O  scan-tree-dump original "master.3.sub6noiso .1, z, y, x, 0B, 0B, 1, 1, 0, 0\);"
FAIL: gfortran.dg/c_f_pointer_tests_3.f90  -O  scan-tree-dump-times original "c_f" 1
FAIL: gfortran.dg/c_f_pointer_tests_3.f90  -O  scan-tree-dump-times original "c_f_pointer" 1
FAIL: gfortran.dg/c_f_pointer_tests_3.f90  -O  scan-tree-dump-times original "c_f_pointer_i4" 1
FAIL: gfortran.dg/missing_optional_dummy_4.f90  -O  scan-tree-dump original " tm_doit \(0B, 0\);"
FAIL: gfortran.dg/missing_optional_dummy_5.f90  -O  scan-tree-dump original " tm_doit \(&parm.(6|7), 0B, 0\);"
Comment 1 Richard Henderson 2009-06-18 23:28:07 UTC
Subject: Bug 40488

Author: rth
Date: Thu Jun 18 23:27:40 2009
New Revision: 148685

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=148685
Log:
        PR 40488
        * tree-pass.h (TDF_ASMNAME): New.
        * tree-dump.c (dump_options): Add asmname.
        * doc/invoke.texi: Document it.

        * tree-pretty-print.c (maybe_dump_asm_name): Merge into...
        (dump_decl_name): ...here.
        (dump_function_name): New flags arg; mind TDF_ASMNAME.
        (dump_generic_node): Update dump_function_name calls.
        (print_call_name): New flags arg; update all dump calls.
        * diagnostic.h (print_call_name): Update.
        * gimple-pretty-print.c (dump_gimple_call): Update.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/diagnostic.h
    trunk/gcc/doc/invoke.texi
    trunk/gcc/gimple-pretty-print.c
    trunk/gcc/tree-dump.c
    trunk/gcc/tree-pass.h
    trunk/gcc/tree-pretty-print.c

Comment 2 Richard Henderson 2009-06-18 23:35:57 UTC
Fixed.